Changelog:

Key:
  + Addition
  = Fix
  ! Change
  - Removal

Version 1.3.2 | Tested on CB 1.7.2-R

Version 1.3.1 | Tested on CB 1.7.2-R0.1
 + Updated for CraftBukkit 1.7.2-R0.1 beta, now uses proper Bukkit API to set ResourcePacks
 - Removed 'Use_Packets' option

Version 1.3.0 | Tested on CB 1.7.2-R0.1
 + Updated for Resource Packs using Packets (enable this option in config.yml)
 ! Renamed 'dynamictextures.change_texturepack' permission node to 'dynamictextures.resourcepack'
 ! Changed loading to be post world to ensure all worlds are detected

Version 1.2.3 | Tested on CB 1.5.2-R0.1
 + Added command to refresh the texturepacks of all players
 + Added an Update Checker
 + Added Metrics
 = Fixed issues where worlds were not being detected
  
Version 1.2.2 | Tested on CB 1.4.7-R1.0
 + Added WorldGuard support, set regional textures in config.yml
 + Added command to reload the configuration files
  
Version 1.2.1 | Tested on CB 1.4.7-R1.0
 = Fixed bug where texture packs weren't getting loaded onPlayerLogin
  
Version 1.2.0 | Tested on CB 1.4.7-R1.0
 ! Changed the name of the plugin from WorldTextures to DynamicTextures! All permissionnode names changed accordingly
 = Fixed a bug where world textures weren't loaded if the player is an OP

Version 1.1.0 | Tested on CB 1.4.7-R1.0
 + Added dynamic permission nodes to set a texture pack for groups/users. Set the permission name in the config and use 'worldtextures.node-name'

Version 1.0.0 | Tested on CB 1.4.6-R0.2
 + First release
 + Added config to set a texture pack for every world
 + Switches texture packs when player joins a world