@@ -7,6 +7,7 @@ Key:
   - Removal
 
 Version 1.3.2 | Tested on CB 1.7.2-R
+ = Fixed region textures
 
 Version 1.3.1 | Tested on CB 1.7.2-R0.1
  + Updated for CraftBukkit 1.7.2-R0.1 beta, now uses proper Bukkit API to set ResourcePacks
